# claude-statusline

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: cli.rs  colors.rs  config.rs  error.rs  git.rs  input.rs  main.rs  schedule.rs  terminal.rs  tokens.rs
src/display/: agent.rs  compact.rs  format.rs  full.rs  line1.rs  line2.rs  line3.rs  line4.rs  minimal.rs  mod.rs  progress.rs  tight.rs  width.rs
src/transcript/: blocks.rs  burn.rs  dedup.rs  finder.rs  message.rs  mod.rs  reader.rs  stats.rs
