[package]
name = "cc-statusline"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
dirs = "5.0"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
